@@ -323,69 +323,58 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Multi-Release>true</Multi-Release>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>  
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.3</version>
 				<configuration>
+					<useModulePath>false</useModulePath>
 					<argLine>
 						@{surefireArgLine}
 						-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/2.1.0/jmockit-2.1.0.jar
 						-Dorg.jboss.netty.debug=true
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=info.picocli
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=org.unigrid.hedgehog.common
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
-						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=jersey.server
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli.spork=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=org.apache.commons.lang3
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.handler=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
-                                                --add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=org.apache.commons.lang3
+						-Djava.net.preferIPv4Stack=true
+						-Djava.net.preferIPv4Addresses=true
+						--enable-native-access=ALL-UNNAMED
 						--add-opens java.base/java.lang=ALL-UNNAMED
 						--add-opens java.base/java.math=ALL-UNNAMED
 						--add-opens java.base/java.net=ALL-UNNAMED
 						--add-opens java.base/java.time=ALL-UNNAMED
 						--add-opens java.base/java.util=ALL-UNNAMED
-						--add-reads org.unigrid.hedgehog.common=org.unigrid.hedgehog
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.resource=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli.spork=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=ALL-UNNAMED
 					</argLine>
 					<trimStackTrace>false</trimStackTrace>
+					
 					<reuseForks>false</reuseForks>
-					<forkCount>${system.numcores}</forkCount>
+					<forkCount>1</forkCount>
+					<parallel>none</parallel>
+					<forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
+					
 					<systemPropertyVariables>
 						<testoutput.target>${project.build.directory}</testoutput.target>
 					</systemPropertyVariables>
-					<enableAssertions>true</enableAssertions>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -409,7 +398,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.14.1</version>
 				<configuration>
-					<release>25</release>
+					<release>21</release>
 					<showDeprecation>true</showDeprecation>
 					<annotationProcessorPaths>
 						<path>
@@ -519,7 +508,7 @@
 				<version>3.16.0</version>
 				<configuration>
 					<includeTests>true</includeTests>
-					<targetJdk>25</targetJdk>
+					<targetJdk>21</targetJdk>
 					<rulesets>
 						<ruleset>${project.basedir}/pmd.xml</ruleset>
 					</rulesets>
